--- a/Mod3-Workbook/Week7/Day2/solutions/04-css-box-model/main.css
+++ b/Mod3-Workbook/Week7/Day2/solutions/04-css-box-model/main.css
@@ -3,6 +3,10 @@ html, body {
     font-family: sans-serif;
 }
 
+* {
+    box-sizing: border-box;
+}
+
 /* Phase 1 */
 
 #logo {
@@ -10,11 +14,16 @@ html, body {
     vertical-align: bottom;
 
     /* Your code here */
+    width: 50px;
+    height: 50px;
 }
 
 
 h1 {
     /* Your code here */
+    display: inline-block;
+    /* text-align: center; */
+    margin-bottom: 10px;
 }
 
 /* Phase 2 */
@@ -22,12 +31,19 @@ h1 {
 .box {
     /* DO NOT EDIT */
     vertical-align: top;
-
+    display: inline-block;
     /* Your code here */
+    border: 4px dotted black;
+    background-color: rgb(228, 225, 23);
+    width: 120px;
+    height: 120px;
+    margin: 10px;
+    padding: 20px;
 }
 
 .alternate {
     /* Your code here */
+    box-sizing: border-box;
 }
 
 /* Phase 3 */
@@ -45,6 +61,9 @@ h1 {
     font-size: larger;
 
     /* Your code here */
+    width: fit-content;
+    margin-bottom: 10px;
+    padding: 40px;
 }
 
 .attribution {
@@ -52,4 +71,5 @@ h1 {
     font-style: italic;
 
     /* Your code here */
+    display: block;
 }
