--- a/Mod3-Workbook/Week7/Day2/solutions/05-css-colors-borders-and-shadows/main.css
+++ b/Mod3-Workbook/Week7/Day2/solutions/05-css-colors-borders-and-shadows/main.css
@@ -1,29 +1,43 @@
 .box1 {
   background-color: blueviolet;
+  border-width: 5px;
+  border-color: blue;
+  border-style: solid;
+  /* border: 5px blue solid; */
 }
 
 .box2 {
   background-color: greenyellow;
+  border: dotted red 2px;
+  border-radius: 5px;
 }
 
 .text1 {
   background-color: blue;
+  color: #ffc300
 }
 
 .text2 {
   background-color: burlywood;
+  color: rgb(149, 13, 20)
 }
 
 .box3 {
-  background-color: lavender;
+  background-color: rgb(230, 230, 250, 0.8);
+}
+
+h2 {
+  opacity: 0.5;
 }
 
 .box5 {
   background-color: lemonchiffon;
+  box-shadow: 2px 8px 15px teal;
 }
 
 .box6 {
   background-color: papayawhip;
+  box-shadow: 5px -10px #800000;
 }
 
 
