--- a/Mod3-Workbook/Week7/Day2/solutions/06-css-positioning/main.css
+++ b/Mod3-Workbook/Week7/Day2/solutions/06-css-positioning/main.css
@@ -5,6 +5,7 @@ html, body {
 .container {
     background-color: #2b2d2f;
     position: relative;
+    height: 600px;
 }
 
 .element {
@@ -17,55 +18,62 @@ html, body {
 
 #yellow-box {
     background-color: #ffff00;
-    /* Fill these in
-    position: ;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    top: 0;
-    z-index: ;
+   
+    position: static;  /*default positioning of an element */
+    bottom: 10px;
+    left: 200px;
+    right: 3000px;
+    top: 30px;
+    z-index: -1;
+    /* remaining properties have no effect */
 }
 
 #pink-box {
     background-color: #ff69b4;
-    /* Fill these in
-    position: ;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    top: 0;
-    z-index: ;
+    
+    position: relative;
+    bottom: 80px; /* doesn't go past the container */
+    left: 30px;
+    right: 0px;
+    top: 0px;
+    z-index: 4;
+    /* smallest index putting the element behind the other elements */
 }
 
 #blue-box {
     background-color: #00eeee;
-    /* Fill these in
-    position: ;
-    bottom: 0;
-    left: 0;
+
+    position: absolute;
+    bottom: 30px;
+    left: 50px;
     right: 0;
-    top: 0;
-    z-index: ;
+    z-index: -2;
+    /* completely removed from the normal document flow */ 
 }
 
 #red-box {
     background-color: #ff0000;
-    /* Fill these in
-    position: ;
+
+    position: fixed;
     bottom: 0;
-    left: 0;
+    left: 500px;
     right: 0;
     top: 0;
-    z-index: ;
+    z-index: -1;
+    /* positioned relative to the set viewport. Default on web = browser window  */
+    /* normal document flow is not respected. sort of like absolute positioning meets sticky*/
 }
 
 #orange-box {
     background-color: #ffa500;
-    /* Fill these in
-    position: ;
+
+    position: sticky;
     bottom: 0;
     left: 0;
     right: 0;
-    top: 0;
-    z-index: ;
+    top: 10px;
+    z-index: 0;
+    /* comment in height property on the container to see the change on scroll */
+    /* adding top will maintain a 10px spacing from its respected parent container */ 
+    /* normal document flow is respected. Sort of like fixed meets relative */ 
 }
