--- a/Mod3-Workbook/Week7/Day3/solutions/02-css-grid/main.css
+++ b/Mod3-Workbook/Week7/Day3/solutions/02-css-grid/main.css
@@ -12,27 +12,40 @@ html, body, div {
 
     /* Phase 1 */
     /* Your code here */
+    display: grid;
 
+
+    grid-template-columns: 3fr auto 1fr;
+
+    grid-template-areas: 
+    "header header header"
+    "main divider sidebar"
+    "footer footer footer";
     /* Bonus Phase */
     /* Your code here */
+
+    row-gap: 15px;
 }
 .item-1 {
     background-color: #87a7b3; /* steel blue */
 
     /* Phase 1 */
     /* Your code here */
+    grid-area: header;
 }
 .item-2 {
     background-color: #e1f1dd; /* light sea green */
 
     /* Phase 1 */
     /* Your code here */
+    grid-area: main;
 }
 .item-3 {
     background-color: #cdc7be; /* grey */
 
     /* Phase 1 */
     /* Your code here */
+    grid-area: sidebar;
 }
 .item-4 {
     background-color: #766161; /* brown */
@@ -40,6 +53,7 @@ html, body, div {
 
     /* Phase 1 */
     /* Your code here */
+    grid-area: footer;
 }
 
 .divider {
@@ -47,6 +61,7 @@ html, body, div {
 
     /* Bonus Phase */
     /* Your code here */
+    grid-area: divider;
 }
 
 /* ====== */
@@ -57,4 +72,12 @@ html, body, div {
 
     /* Phase 2 */
     /* Your code here */
+    display: inline-grid;
+
+    grid-template-columns: repeat(6, 100px);
+    grid-template-rows: repeat(3, 50px);
+    grid-auto-flow: column;
+
+    justify-items: center;
+    align-items: center;
 }
