js code for injecting elements

--- a/Mod3-Workbook/Week7/Day4/solutions/html-demo/index.css
+++ b/Mod3-Workbook/Week7/Day4/solutions/html-demo/index.css
@@ -79,3 +79,15 @@ button.get-started {
     background-color: black;
     color: white;
 }
+
+#m-madness-container {
+    /* display: flex;
+    flex-wrap: wrap; */
+    width: 400px;
+
+}
+
+#m-madness-container > p {
+    display: inline-block;
+    margin: 0;
+}
