data attribute solution

--- a/Mod3-Workbook/Week9/Day3/solutions/02-data-on-elements/index.css
+++ b/Mod3-Workbook/Week9/Day3/solutions/02-data-on-elements/index.css
@@ -7,3 +7,10 @@ li {
 }
 
 /* Your code here */
+[data-type="dairy"] {
+    background-color: blue
+}
+
+[data-type="bakery"] {
+    background-color: gold
+}
